# ScueDK

./: CMakeLists.txt  README.md  package.xml
inc/: scuedk.h
scuedk_embedded/master/: MasterSerialLine.cpp  MasterSerialLine.h  PacketTranslator.cpp  PacketTranslator.h  Util.cpp  Util.h
scuedk_embedded/slave/inc/: serial_line.h
scuedk_embedded/slave/src/: serial_line.c
scuedk_ros/inc/: scuedk.h
serial_line/inc/: Util.h  config.h  node.h  packetgenerator.h  packettranslator.h
serial_line/include/serial_line/: DataStructure.h  Util.h  config.h  device.h  indexes.h  main_window.hpp  packetgenerator.h  packettranslator.h  qnode.hpp
serial_line/src/: DataStructure.cpp  Util.cpp  device.cpp  main.cpp  main_window.cpp  node.cpp  packetgenerator.cpp  packettranslator.cpp  qnode.cpp
serial_line/ui/: main_window.ui
src/: scuedk.cpp
structs/: structs.c  structs.h
